[package]
name = "lua-int"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utf8-decode = "1.0.1"
js-sys = "0.3.69"
wasm-bindgen = { version = "0.2.92"}
once_cell = "1.19.0"

[lib]
name = "lua_int"
crate-type = ["cdylib", "lib"]
